Fix button layout issues

--- a/style.scss
+++ b/style.scss
@@ -185,6 +185,7 @@ input[type="color"]::-moz-color-swatch {
 #screenshot-btn {
   margin-top: 1rem;
   width: max-content;
+  background-color: $color-teal;
 }
 
 #screenshot-btn:hover {
